--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
     <div style="text-align: center;">
-        <img src="lecuoi.jpeg" alt="Birthday cake" width="500">
+        <img src="lecuoi.JPEG" alt="hinh cuoi" width="500">
       </div>
 
     
