--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <h1 style = "color:rgb(253, 94, 30);
-                font-size: 35px;
+                font-size: 100px;
                 text-align: center;
                 font-family: 'Dancing Script';
                 text-shadow: 1px 1px 3px #ff5e5e1c;">
@@ -25,11 +25,11 @@
 
 
     <div class="navbar">
-        <a href="index.html">𓍯𓂃𓏧♡ Lời chúc ở đây nè ᯓᡣ𐭩</a>
+        <a href="wishes.html">𓍯𓂃𓏧♡ Bấm vào đây để xem người phụ nữ đẹp nhất thế giới này ᯓᡣ𐭩</a>
       </div>
 
     <div style="text-align: center;">
-        <img src="lecuoi.JPEG" alt="hinh cuoi" width="500">
+        <img src="lecuoi.JPEG" alt="hinh cuoi" width="500" height="100%">
       </div>
 
     
