--- a/wishes.html
+++ b/wishes.html
@@ -21,7 +21,7 @@
         <span>Hoa hậu nào đây??</span>
       </div>
       <div class="bubble">
-        <img src="mompic3.jpeg" alt="le cuoi" />
+        <img src="mompic3.JPEG" alt="le cuoi" />
         <span>Rước nàng về dinh</span>
       </div>
       <div class="bubble">
