--- a/wishes.html
+++ b/wishes.html
@@ -30,7 +30,7 @@
       </div>
       <div class="bubble">
         <img src="mompic10.JPEG" alt="le cuoi" />
-        <span>Người đẹp lớn & nhí ở Đà Lạt</span>
+        <span>Kỉ niệm người đẹp ở Đà Lạt</span>
       </div>
     </div>
     <div class="">
@@ -44,7 +44,7 @@
           </div>
         <div class="bubble">
             <img src="momdadselfie.JPEG" alt="le cuoi" />
-            <span>30 năm cơm nước cùng nhau</span>
+            <span>30 năm cùng ăn cơm nước</span>
         </div>
           <div class="bubble">
             <img src="mompic9.JPEG" alt="le cuoi" />
